[package]
name = "penrose"
version = "0.1.0"
authors = ["alexokonski <alexanderokonski@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.5.0"
bevy_prototype_lyon = "0.3.1"
rand = "0.8.3"
lazy_static = "1.4.0"
enum-primitive-derive = "^0.1"
num-traits = "^0.1"